<resources>
    <string name="app_name">NUMAD22Fa_Team51_Project</string>
    <string name="application_name">TaskTracker</string>
    <string name="intro_helper_text">Click Sign Up, if this is your first time using this app. If you already have an account, enter your credentials and simply click Sign In!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="username">User Name</string>
    <string name="register">Register</string>
    <string name="sign_up_helper_text">Enter your desired username, email and password, to set up an account</string>
    <string name="project_board_illustration">project_board_illustration</string>
    <string name="login_board_illustration">login board illustration</string>
    <string name="profile_image">profile image</string>
    <string name="show_chart">My progress</string>
    <string name="my_profile">My profile</string>
    <string name="phone">Phone</string>
    <string name="update">Update</string>
    <string name="create_board_title">Create Board</string>
    <string name="create">Create</string>
    <string name="board_name">Board Name</string>
    <string name="card_name">Card Name</string>
    <string name="add_card">Add Card</string>
    <string name="no_tasks_created">No Tasks Created</string>
    <string name="notes">Notes</string>
    <string name="pick_date">Pick Date</string>
    <string name="due_date">Due Date</string>
    <string name="clear_date">Clear Date</string>
    <string name="select_date">Select Date</string>
    <string name="task_completed">Task Completed?</string>
    <string name="task_complete">Task Complete</string>
    <string name="points">Points</string>
</resources>