<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfileActivity">

    <!--        app:srcCompat="@android:drawable/ic_input_add"-->

    <ImageView
        android:id="@+id/my_profile_img_view"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_vertical"
        android:background="@android:color/holo_green_light"
        android:contentDescription="@string/profile_image"
        android:padding="2dp"
        android:src="@drawable/avatar_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/update_my_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.872"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView_Camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/profile_image"
        app:layout_constraintBottom_toBottomOf="@+id/my_profile_img_view"
        app:layout_constraintEnd_toEndOf="@+id/my_profile_img_view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/my_profile_img_view"
        app:layout_constraintTop_toTopOf="@+id/my_profile_img_view"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_menu_camera"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView_Delete"
        android:layout_width="31dp"
        android:layout_height="29dp"
        android:contentDescription="@string/profile_image"
        app:layout_constraintBottom_toBottomOf="@+id/my_profile_img_view"
        app:layout_constraintEnd_toEndOf="@+id/imageView_Camera"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/my_profile_img_view"
        app:layout_constraintTop_toTopOf="@+id/my_profile_img_view"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_delete"
        tools:ignore="ImageContrastCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="60dp"
        app:cardCornerRadius="50dp"
        android:theme="@style/Theme.NUMAD22Fa_Team51_Project"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="385dp"
            android:background="#E6FDE8"
            android:orientation="vertical"
            android:paddingLeft="21dp"
            android:paddingRight="21dp"
            android:paddingBottom="11dp"
            android:radius='30dp'
            android:theme="@style/Theme.NUMAD22Fa_Team51_Project"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/email" />

            <EditText
                android:id="@+id/email_id_my_profile_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:autofillHints="emailAddress"
                android:ems="12"
                android:focusableInTouchMode="false"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/phone" />

            <EditText
                android:id="@+id/mobile_my_profile_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:autofillHints="phone"
                android:maxLength="10"
                android:ems="12"
                android:hint="@string/phone"
                android:inputType="phone"
                android:minHeight="48dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/password" />

            <EditText
                android:id="@+id/password_my_profile_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:autofillHints="password"
                android:ems="12"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/username" />

            <EditText
                android:id="@+id/user_name_my_profile_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:autofillHints="username"
                android:ems="12"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>